--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# floders
 __pycache__
 .vscode
-frp_0.54.0_linux_amd64
 test
-
-# personal files
-config.json
-audit/resource/*
-*.pickle
+config/*.json
