--- a/config/bupt.json.example
+++ b/config/bupt.json.example
@@ -1,5 +1,10 @@
 {
-    "username":"",
-    "password":"",
-    "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+    "cas": {
+        "username":"",
+        "password":""
+    },
+    "win": {
+        "username": "",
+        "password": ""
+    }
 }
