--- a/config/feishu.json.example
+++ b/config/feishu.json.example
@@ -1,4 +1,9 @@
 {
     "appID": "",
-    "appSecret": ""
+    "appSecret": "",
+    "admin": {
+        "mobile": null,
+        "email": null,
+        "open_id": null
+    },
 }
